<resources>
    <string name="app_name">My App</string>
    <string name="we_will_send_you_an_one_time_otp_on_this_given_mobile_number">we will send you an one time otp on this given mobile number</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="submit">SUBMIT</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp</string>
    <string name="resend_opt_again">RESEND OPT AGAIN</string>
    <string name="please_enter_your_opt">Please enter your OPT</string>
    <string name="title_activity_dashboard">dashboard</string>

    <string name="get_otp">Get OTP</string>
</resources>