<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entermobilenumber"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:src="@drawable/images" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="OTP Verification"
        style="@style/mytext"

        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_will_send_you_an_one_time_otp_on_this_given_mobile_number"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        android:textSize="14sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile_number"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:textSize="14sp" />





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="+91"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_mobile_number"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/backgroundbox"
        android:gravity="center"

        android:hint="8349823983"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="16sp"
        android:textStyle="bold" />



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >


        <Button
            android:id="@+id/buttongetotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:layout_marginTop="8dp"
            style="@style/mybutton"


            android:text="@string/get_otp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    <ProgressBar
        android:id="@+id/progressbar_sending_otp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    </FrameLayout>





</LinearLayout>





