<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verificationpage"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"

        app:srcCompat="@drawable/download" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/otp_verification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_opt"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textmobileshownumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"



        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/inputotp1"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="70dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:ignore="Lablefor,TouchTargetSizeCheck" />

        <EditText
            android:background="@drawable/backgroundbox"
            android:id="@+id/inputotp2"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="Lablefor"
            />
        <EditText
            android:background="@drawable/backgroundbox"
            android:id="@+id/inputotp3"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="Lablefor"
            />
        <EditText
            android:background="@drawable/backgroundbox"
            android:id="@+id/inputotp4"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="Lablefor"
            />
        <EditText
            android:background="@drawable/backgroundbox"
            android:id="@+id/inputotp5"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="Lablefor"
            />
        <EditText
            android:background="@drawable/backgroundbox"
            android:id="@+id/inputotp6"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="Lablefor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_the_otp"
            android:textColor="@color/litegray"
            android:layout_marginStart="40dp"
            android:textSize="14sp"

            />
        <TextView
            android:id="@+id/textresentopt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_opt_again"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>





    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttongetotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/backgroundbox"

            android:text="@string/submit"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_verify_otp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

    </FrameLayout>
</LinearLayout>




